Fix T62835: Color picker template value slider does not scale correctly with UI scale

Missing multiplication with UI_DPI_FAC.